Create Multi-Module Project for Data Model. closed #1 https://github.com/springframeworkguru/sfg-pet-clinic/issues/2 closed #2 Add Maven Release Plugin Closed #3 Create Interfaces for Pet Clinic Services closed #4 Implement Map Based Services closed #5 Create Vet Index page and controller closed #6 Add Pet Clinic Index Page and Controller closed #7 Add WebJars for Bootstrap CSS and JQuery closed #8